force-app/main/default/objects/Dynamic_Record_Search_Config__c/Dynamic_Record_Search_Config__c.object-meta.xml
<CustomObject>
    <description>Dynamic Record Search Config. This object is for ADMINS.</description>
    <label>Dynamic Record Search Config</label>
    <nameField>
        <displayFormat>DRS-{00000}</displayFormat>
        <label>Dynamic Record Search Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dynamic Record Search Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>