force-app/main/default/objects/Dynamic_Record_Search_Config__c/fields/Field_List__c.field-meta.xml
<CustomField>
    <fullName>Field_List__c</fullName>
    <description>Comma separated filed list of object mentioned in Object API Name. These filed will be used for show data and search</description>
    <inlineHelpText>Comma separated filed list of object mentioned in Object API Name. These filed will be used for show data and search</inlineHelpText>
    <label>Field List</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>