force-app/main/default/objects/Dynamic_Record_Search_Config__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User which will have the access on and Fields</description>
    <inlineHelpText>User which will have the access on and Fields</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Dynamic_Record_Search_Config</relationshipName>
    <type>Lookup</type>
</CustomField>