force-app/main/default/objects/Dynamic_Record_Search_Config__c/validationRules/Filed_List_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Filed_List_validation</fullName>
    <active>true</active>
    <description>Filed List validation</description>
    <errorConditionFormula>ISBLANK(Field_List__c)</errorConditionFormula>
    <errorDisplayField>Field_List__c</errorDisplayField>
    <errorMessage>This field can not be empty.</errorMessage>
</ValidationRule>